[fix] payment flexbox break on mobile.

--- a/figma_v1/assets/css/index.css
+++ b/figma_v1/assets/css/index.css
@@ -252,6 +252,15 @@ a {
 
 .payment__total-payable {
   margin-bottom: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .payment__total-payable-text {
