--- a/figma_v1/assets/sass/components/_payment.sass
+++ b/figma_v1/assets/sass/components/_payment.sass
@@ -29,6 +29,9 @@
 
     &__total-payable
         margin-bottom: 1em
+        display: flex
+        align-items: center
+        justify-content: space-between
 
     &__total-payable-text
         color: #929292
